--- a/k8s/postgres/postgres-service.yaml
+++ b/k8s/postgres/postgres-service.yaml
@@ -5,8 +5,10 @@ metadata:
 spec:
   selector:
     app: postgres
+  type: NodePort
   ports:
     - name: postgres
       protocol: TCP
       port: 5432
       targetPort: 5432
+      nodePort: 30432
