--- a/BatchPortal/appsettings.json
+++ b/BatchPortal/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ApiGateway": {
-    "BaseUrl": "http://localhost:8080"
+    "BaseUrl": "http://api-gateway"
+  },
+  "BatchPortal": {
+    "DefaultUserId": "demo-user"
   },
   "ConnectionStrings": {
     "Postgres": "Host=postgres;Port=5432;Database=batchdb;Username=batch;Password=batch"
