--- a/k8s/monitoring/prometheus-configmap.yaml
+++ b/k8s/monitoring/prometheus-configmap.yaml
@@ -7,6 +7,15 @@ data:
     global:
       scrape_interval: 5s
 
+    alerting:
+      alertmanagers:
+        - static_configs:
+            - targets:
+                - "alertmanager:9093"
+
+    rule_files:
+      - /etc/prometheus/rules/*.yml
+
     scrape_configs:
       - job_name: 'api-gateway'
         metrics_path: /metrics
