--- a/k8s/monitoring/prometheus-deployment.yaml
+++ b/k8s/monitoring/prometheus-deployment.yaml
@@ -26,9 +26,14 @@ spec:
               mountPath: /etc/prometheus
             - name: data
               mountPath: /prometheus
+            - name: prometheus-rules
+              mountPath: /etc/prometheus/rules
       volumes:
         - name: config
           configMap:
             name: prometheus-config
         - name: data
           emptyDir: {}
+        - name: prometheus-rules
+          configMap:
+            name: prometheus-alert-rules
