Remove company references and update namespace

--- a/k8s/monitoring/alert-rules.yaml
+++ b/k8s/monitoring/alert-rules.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-alert-rules
-  namespace: doubleword-batch
+  namespace: batch-inference
   labels:
     app: prometheus
 data:
