--- a/k8s/monitoring/alerting/alertmanager.yaml
+++ b/k8s/monitoring/alerting/alertmanager.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: alertmanager
-  namespace: doubleword-batch
+  namespace: batch-inference
   labels:
     app: alertmanager
 spec:
@@ -36,7 +36,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: alertmanager
-  namespace: doubleword-batch
+  namespace: batch-inference
   labels:
     app: alertmanager
 spec:
