--- a/k8s/portal/batch-portal.yaml
+++ b/k8s/portal/batch-portal.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: batch-portal
-  namespace: doubleword-batch
+  namespace: batch-inference
 spec:
   replicas: 1
   selector:
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: batch-portal
-  namespace: doubleword-batch
+  namespace: batch-inference
 spec:
   selector:
     app: batch-portal
