--- a/k8s/postgres/postgres-repair-pod.yaml
+++ b/k8s/postgres/postgres-repair-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: postgres-repair
-  namespace: doubleword-batch
+  namespace: batch-inference
   labels:
     app: postgres-repair
 spec:
