Use configurable Grafana link in portal

--- a/BatchPortal/appsettings.Development.json
+++ b/BatchPortal/appsettings.Development.json
@@ -3,6 +3,9 @@
   "Api": {
     "BaseUrl": "http://localhost:30080"
   },
+  "Monitoring": {
+    "GrafanaUrl": "http://localhost:3000"
+  },
   "BatchPortal": {
     "DefaultUserId": "demo-user"
   },
