--- a/BatchPortal/appsettings.json
+++ b/BatchPortal/appsettings.json
@@ -2,6 +2,9 @@
   "Api": {
     "BaseUrl": "http://api-gateway"
   },
+  "Monitoring": {
+    "GrafanaUrl": "http://grafana:30300"
+  },
   "BatchPortal": {
     "DefaultUserId": "demo-user"
   },
