Update ports, scaling, and grafana redeploy

--- a/BatchPortal/appsettings.json
+++ b/BatchPortal/appsettings.json
@@ -3,7 +3,7 @@
     "BaseUrl": "http://api-gateway"
   },
   "Monitoring": {
-    "GrafanaUrl": "http://grafana:30300"
+    "GrafanaUrl": "http://localhost:30300"
   },
   "BatchPortal": {
     "DefaultUserId": "demo-user"
