Normalize request lifecycle and queue semantics

--- a/GpuWorker/GpuWorker.csproj
+++ b/GpuWorker/GpuWorker.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="GpuWorker.UnitTests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 </Project>
