Enable startup migrations and redeploy script

--- a/k8s/api/api-deployment.yaml
+++ b/k8s/api/api-deployment.yaml
@@ -21,6 +21,8 @@ spec:
               value: "Production"
             - name: ConnectionStrings__Postgres
               value: "Host=postgres;Port=5432;Database=batchdb;Username=batch;Password=batch"
+            - name: MIGRATIONS__APPLYONSTARTUP
+              value: "true"
             - name: Storage__BasePath
               value: "/data/files"
           ports:
