--- a/k8s/worker/gpu-worker-spot-deployment.yaml
+++ b/k8s/worker/gpu-worker-spot-deployment.yaml
@@ -29,6 +29,19 @@ spec:
               value: "spot"
             - name: WORKER_ID
               value: "spot-1"
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: 8081
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /health/live
+              port: 8081
+            initialDelaySeconds: 10
+            periodSeconds: 10
           volumeMounts:
             - name: user-storage
               mountPath: /data/files
