--- a/BatchPortal/BatchPortal.csproj
+++ b/BatchPortal/BatchPortal.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+  </ItemGroup>
+
 </Project>
