--- a/SchedulerService/appsettings.json
+++ b/SchedulerService/appsettings.json
@@ -7,5 +7,9 @@
   },
   "Scheduling": {
     "SlaEscalationThresholdHours": 5
+  },
+  "Deduplication": {
+    "Enabled": true,
+    "PerUserScope": false
   }
 }
